Created dual spectrum display

--- a/BrillouinScanConfig.ini
+++ b/BrillouinScanConfig.ini
@@ -11,9 +11,11 @@ laser_position_x = 283
 laser_position_y = 226
 
 [Andor]
-spectcenter = 186
-slineidx = 23
+sampleSpectCenter = 186
+calibSpectCenter = 100
+sampleSlineIdx = 23
+calibSlineidx = 23
 
 [Mako]
-pupilradius = 120.0
+pupilRadius = 120.0
 
