Mako camera --> microscope FLIR camera

--- a/BrillouinScanConfig.ini
+++ b/BrillouinScanConfig.ini
@@ -11,13 +11,16 @@ laser_position_x = 283
 laser_position_y = 226
 
 [Andor]
-sampleSpectCenter = 186
-calibSpectCenter = 100
-sampleSlineIdx = 23
-calibSlineidx = 23
+samplespectcenter = 186
+calibspectcenter = 100
+sampleslineidx = 23
+calibslineidx = 23
 
 [Mako]
-pupilRadius = 120.0
+cmosexptime = 100
+cmosframerate = 2
+pupilradius = 120.0
 
 [Synth]
-RFpower = 1.0
+rfpower = 1.0
+
